--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.45MB/s(Youtube:不良林), server: 953e517.v8.gladns.com, port: 3331, type: vmess, uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /s/953e517.fm.apple.com:89692, ws-headers: {Host: 953e517.v8.gladns.com}}
-  - {name: 🇨🇳 中国-450.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-704.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 未知国家-173.4KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.68MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-686.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-929.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-985.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-611.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-450.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-704.1KB/s(Youtube:不良林)
-      - 未知国家-173.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
