--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.68MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-686.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-929.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-985.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-611.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-995.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-857.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇮🇳 印度-1.41MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
+  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-831.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-408.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-686.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-985.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-611.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
