--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-995.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 38.143.66.20, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-857.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇮🇳 印度-1.41MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
-  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: mjk6.cdn.node.a.ddns-ounk.xyz, port: 13298, type: ssr, cipher: rc4-md5, password: Cskw6d, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: 270046:Etrt9d, obfs-param: TW1OaU5EVXlOekF3TkRZdWJXbGpjbTl6YjJaMExtTnZiUQ}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: eqwr51.cdn.node.a.ddns-ounk.xyz, port: 13354, type: ssr, cipher: rc4-md5, password: Cskw6d, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: 270046:Etrt9d, obfs-param: TW1OaU5EVXlOekF3TkRZdWJXbGpjbTl6YjJaMExtTnZiUQ}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: cd69.cdn.node.a.ddns-ounk.xyz, port: 13639, type: ssr, cipher: rc4-md5, password: Cskw6d, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: 270046:Etrt9d, obfs-param: TW1OaU5EVXlOekF3TkRZdWJXbGpjbTl6YjJaMExtTnZiUQ}
   - {name: 🇺🇸 美国-831.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-408.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-245.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.88MB/s(Youtube:不良林), server: r97q.cdn.node.a.ddns-ounk.xyz, port: 12990, type: vmess, uuid: c50e7ff0-98ef-33ba-a226-1e77952cd6c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /2294-44e2-a528-d9fb1adaa35f.v4..live01.m3u8, ws-headers: {Host: r97q.cdn.node.a.ddns-ounk.xyz}}
+  - {name: 🇨🇳 中国-6.00MB/s(Youtube:不良林), server: q8eq.cdn.node.a.ddns-ounk.xyz, port: 13094, type: vmess, uuid: c50e7ff0-98ef-33ba-a226-1e77952cd6c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /2294-44e2-a528-d9fb1adaa35f.v4..live01.m3u8, ws-headers: {Host: q8eq.cdn.node.a.ddns-ounk.xyz}}
+  - {name: 🇨🇳 中国-374.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-377.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-931.8KB/s(Youtube:不良林), server: 89.238.165.226, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-995.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-857.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-831.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-408.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-245.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-374.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-931.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
