--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-858.2KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 未知国家-1.65MB/s(Youtube:不良林), server: vfly6.xyz, port: 443, type: vmess, uuid: f3b6fd11-4444-4efa-b19a-13ad22d0a782, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly6.xyz}}
+  - {name: 🇩🇪 德国-1.12MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.15MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.43MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-858.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 未知国家-1.65MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.43MB/s(Youtube:不良林)
